<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_marginTop="@dimen/_20"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:id="@+id/sitedetails_fragment"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="@dimen/_60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sd_title"
            android:text="@string/site_details_title"
            android:textAlignment="center"
            android:textSize="@dimen/_30"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_bedrooms"
            android:text="@string/sd_bedrooms"
            android:textSize="@dimen/_20"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/sd_bedrooms_amt"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/sd_bd_hint"
            android:hint="@string/_0"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_bathrooms"
            android:text="@string/sd_bathrooms"
            android:textSize="@dimen/_20"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sd_bathrooms_amt"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/sd_ba_hint"
            android:hint="@string/_0"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_stories"
            android:text="@string/sd_stories"
            android:textSize="@dimen/_20"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sd_stories_amt"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/sd_stories_hint"
            android:hint="@string/_0"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_square_feet"
            android:text="@string/sd_square_feet"
            android:textSize="@dimen/_20"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sd_square_feet_amt"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/sd_sqft_hint"
            android:hint="@string/_0"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_inspection_fee"
            android:text="@string/sd_inspection_fee"
            android:textSize="@dimen/_20"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sd_inspection_fee_amt"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/inspection_fee_hint"
            android:hint="@string/_0"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_year_built"
            android:text="@string/sd_year_built"
            android:textSize="@dimen/_20"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sd_year_built_amt"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/inspection_fee_hint"
            android:hint="@string/_0"
            android:inputType="numberDecimal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_furnished"
            android:text="@string/sd_furnished"
            android:textSize="@dimen/_20"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/sd_furnished_amt"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/sd_furnished"
            android:hint="@string/no_furnished"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_present"
            android:text="@string/present_at_inspection"
            android:textSize="@dimen/_20"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:id="@+id/sd_present_amt"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/sd_present_hint"
            android:hint="@string/buyer_present"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sd_orientation"
            android:text="@string/orientation"
            android:textSize="@dimen/_20"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sd_orientation_amt"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="@dimen/_20"
            android:autofillHints="@string/orientation_hint"
            android:hint="@string/north"
            />

        <Button
            android:id="@+id/sd_submit"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30"
            android:background="@drawable/form"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/submit_and_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_25"
            android:layout_marginBottom="@dimen/_40"/>


    </LinearLayout>

</ScrollView>
