<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60"
        android:id="@+id/asc_dialog_title"
        android:text="@string/add_subcategory"
        android:textSize="35sp"
        android:textColor="@color/dialogueText"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:textColor="@color/dialogueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/asc_dialog_category"
        android:text="@string/select_category"
        app:layout_constraintBottom_toTopOf="@id/asc_dialog_title_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asc_dialog_title"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/category_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/asc_dialog_title"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/background"
        android:hint="@string/enter_subcategory_name"
        android:textColorHint="@color/dialogueText"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="25sp"
        android:autofillHints="@string/asc_sc_name"
        android:id="@+id/asc_dialog_title_edit"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_spinner"
        />

</androidx.constraintlayout.widget.ConstraintLayout>